@@ -36,8 +36,7 @@ public class VirtSerializer implements Serializer {
 		initTables();
 	}
 	
-	@Override
-    public void gatherData(ObjectBundle bundle) {
+	public void gatherData(ObjectBundle bundle) {
 		Iterator<BSBMResource> it = bundle.iterator();
 	
 		try {
@@ -229,7 +228,7 @@ public class VirtSerializer implements Serializer {
 				StringBuffer valuesPTP = getBuffer(tables.productTypeProductInsertCounter++, "ProductTypeProduct");
 				
 				valuesPTP.append("(" + product.getNr() + ",");
-				valuesPTP.append(new Integer(pt.getNr()).toString());
+				valuesPTP.append(Integer.valueOf(pt.getNr()).toString());
 				valuesPTP.append(")");
 				
 				if(tables.productTypeProductInsertCounter>=insertNumber) {
@@ -245,7 +244,7 @@ public class VirtSerializer implements Serializer {
 			StringBuffer valuesPTP = getBuffer(tables.productTypeProductInsertCounter++, "ProductTypeProduct");
 			
 			valuesPTP.append("(" + product.getNr() + ",");
-			valuesPTP.append(new Integer(product.getProductType().getNr()).toString());
+			valuesPTP.append(Integer.valueOf(product.getProductType().getNr()).toString());
 			valuesPTP.append(")");
 			
 			if(tables.productTypeProductInsertCounter>=insertNumber) {
@@ -299,7 +298,7 @@ public class VirtSerializer implements Serializer {
 		}
 		
 		//dc:publisher
-		values.append(new Integer(product.getProducer()).toString());
+		values.append(Integer.valueOf(product.getProducer()).toString());
 		values.append(",");
 			
 		//dc:date
@@ -575,8 +574,7 @@ public class VirtSerializer implements Serializer {
 		tables.reviewDump.append(values);
 	}
 	
-	@Override
-    public void serialize() {
+	public void serialize() {
 		//Finish files and close
 		try {
 			tables.productTypeDump.flush();
@@ -615,12 +613,11 @@ public class VirtSerializer implements Serializer {
 		}
 	}
 
-	@Override
-    public Long triplesGenerated() {
+	public Long triplesGenerated() {
 		return nrTriples;
 	}
 
-	private class SQLTables {
+	private static class SQLTables {
 		FileWriter offerDump;
 		FileWriter vendorDump;
 		FileWriter productFeatureDump;
